# swaggin-fh

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
docs/source/: conf.py  index.rst
src/swaggin-fh/: swagginfh.py
src/swaggin_fh/: __init__.py
test/: pyvenv.cfg
test/Scripts/: activate  activate.bat
