[metadata]
name = swaggin_fh
version = 0.0.1
author = perigonsr
author_email = stripeysweatercat@gmail.com
description = A package for reading and writing .swaggin files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stripeysweatercat/swaggin-fh
project_urls =
    Bug Tracker = https://github.com/stripeysweatercat/swaggin-fh/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
